Fixed: collapsed navbar + border-bottom

--- a/css/base.css
+++ b/css/base.css
@@ -79,8 +79,13 @@ nav {
 a.nav-link.active {
     font-weight: bold;
     color: var(--secondary);
-    border-bottom: var(--secondary) solid 2px;
-    border-radius: 2px;
+}
+
+@media (min-width: 768px) {
+    a.nav-link.active {
+        border-bottom: var(--secondary) solid 2px;
+        border-radius: 2px;
+    }
 }
 
 .bg-white-blur {
